--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^8.5.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.5",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
